--- a/entrada.html
+++ b/entrada.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+        <link rel="preconnect" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
         <link
             href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Noto+Serif:ital,wght@0,600;1,600&display=swap"
             rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/styles.css" />
+        >
+        <link rel="stylesheet" href="./css/styles.css" >
         <title>Vital360 - Blog</title>
     </head>
     <body>
         <header>
             <a href="/index.html"
                 ><img src="./img/logoVital360.svg" alt="Logo de Vital360"
-            /></a>
+            ></a>
 
             <ul>
                 <li><a href="/blog.html">BLOG</a></li>
@@ -36,7 +36,7 @@
                         <img
                             src="./img/estrategies-vida-activa.jpg"
                             alt="Dona nedant a la platja"
-                        />
+                        >
                         <h1>Estratègies per a una vida activa</h1>
                         <p class="author-date">
                             Per Daniel López - 30 de desembre de 2023 – Fitness
@@ -206,7 +206,7 @@
                                 <img
                                     src="./img/desintoxicacio-digital.jpg"
                                     alt="Home mirant el mòvil"
-                                />
+                                >
                             </figure>
                             <h3>Desintoxicació digital</h3>
                             <p class="author-date">
@@ -219,7 +219,7 @@
                                 <img
                                     src="./img/connexio-ment-cos.jpg"
                                     alt="Home pensant a la platja"
-                                />
+                                >
                             </figure>
                             <h3>La connexió entre ment i cos</h3>
                             <p class="author-date">
@@ -232,7 +232,7 @@
                                 <img
                                     src="./img/aliments-combaten-estres.jpg"
                                     alt="Aliments que combaten estres"
-                                />
+                                >
                             </figure>
                             <h3>Aliments que combaten l’estrès</h3>
                             <p class="author-date">
@@ -260,20 +260,20 @@
                     src="./img/logoVital360-n.svg"
                     alt="Logo de Vital360"
                     class="logo"
-                />
+                >
                 <p>2023-2024 | Carlos Castillo Martínez</p>
             </div>
             <div>
                 <div class="social-media">
                     <a href="#"
                         ><img src="./img/twitter.svg" alt="Logo de twitter"
-                    /></a>
+                    ></a>
                     <a href="#"
                         ><img src="./img/instagram.svg" alt="Logo d'instagram"
-                    /></a>
+                    ></a>
                     <a href="#"
                         ><img src="./img/youtube.svg" alt="Logo de youtube"
-                    /></a>
+                    ></a>
                 </div>
                 <div class="termes-legals">
                     <a href="#">Política de privadesa</a>
