--- a/videos.html
+++ b/videos.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ca">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+        <link rel="preconnect" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
         <link
             href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Noto+Serif:ital,wght@0,600;1,600&display=swap"
             rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/styles.css" />
+        >
+        <link rel="stylesheet" href="./css/styles.css" >
         <title>Vital360 - Videos</title>
     </head>
     <body>
         <header>
             <a href="index.html"
                 ><img src="./img/logoVital360.svg" alt="Logo de Vital360"
-            /></a>
+            ></a>
             <div>
                 <ul>
                     <li><a href="/blog.html">BLOG</a></li>
@@ -34,7 +34,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/VaoV1PrYft4"
                         title="10 minute Morning Yoga for Beginners"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -52,7 +51,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/ksi-c8YgClY"
                         title="RUTINA DE CARDIO EN CASA | 20 MINUTOS QUEMA GRASA"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -70,7 +68,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/qXr7xHZUxvY"
                         title="PILATES CORE 45 minutos, Fortalece tu abdomen y centro"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -88,7 +85,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/mT8MVyEopgs"
                         title="FUERZA CON TU PROPIO PESO // Rutina con el propio peso corporal"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -106,7 +102,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/ZToicYcHIOU"
                         title="Daily Calm | 10 Minute Mindfulness Meditation | Be Present"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -124,7 +119,6 @@
                         height="315"
                         src="https://www.youtube.com/embed/2L2lnxIcNmo"
                         title="Bowflex® Stretch | Five-Minute Full Body Stretch"
-                        frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen
                     ></iframe>
@@ -141,20 +135,20 @@
 
         <footer>
             <div>
-                <img src="./img/logoVital360-n.svg" alt="Logo de Vital360" />
+                <img src="./img/logoVital360-n.svg" alt="Logo de Vital360" >
                 <p>2023-2024 | Carlos Castillo Martínez</p>
             </div>
             <div>
                 <div>
                     <a href="#"
                         ><img src="./img/twitter.svg" alt="Logo de twitter"
-                    /></a>
+                    ></a>
                     <a href="#"
                         ><img src="./img/instagram.svg" alt="Logo d'instagram"
-                    /></a>
+                    ></a>
                     <a href="#"
                         ><img src="./img/youtube.svg" alt="Logo de youtube"
-                    /></a>
+                    ></a>
                 </div>
                 <div>
                     <a href="#">Política de privadesa</a>
